<resources>
    <string name="app_name">ITrack Minor</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_announcement">Announcement</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_location">Location</string>
    <string name="nav_emergency">Toggle emergency</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Location</item>
        <item>Notifications</item>
        <item>Announcement</item>
        <item>Toggle emergency</item>
    </string-array>
    <string name="msg_subscribed">App token has been issued</string>
    <string name="msg_subscribe_failed">Failed to subscribe to emergency topic</string>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Notification fragment</string>
    <string name="hello_location_fragment">Location</string>

    <string name="map_key">AIzaSyD8lLzsANyZteJNlQIXHzeMUQiqw8QOaxM </string>
    <!--This is an action setting for the recyclerview-->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="nav_logout">Logout</string>
    <string name="track_minor">Track location</string>
    <string name="publish_location">Publish location</string>
</resources>
