<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:title="Home" />
    <item
        android:id="@+id/nav_location"
        android:icon="@drawable/itrack_logo"
        android:title="@string/track_minor" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/nav_notifications" />

    <item
        android:id="@+id/nav_announcement"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/nav_announcement" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/nav_logout" />

    </group>


    <!--<item-->
        <!--android:id="@+id/nav_notifications"-->
        <!--android:icon="@drawable/ic_notifications_black_24dp"-->
        <!--android:title="@string/nav_notifications" />-->

    <!--<item-->
        <!--android:id="@+id/nav_settings"-->
        <!--android:icon="@drawable/ic_settings_black_24dp"-->
        <!--android:title="@string/nav_settings" />-->


</menu>